--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 4285",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 4285",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "14.1.0",
     "ol": "^8.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "supertokens-web-js": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
